--- a/ereuse_devicehub/dummy/files/keyboard.snapshot.yaml
+++ b/ereuse_devicehub/dummy/files/keyboard.snapshot.yaml
@@ -7,7 +7,7 @@ device:
   serialNumber: BAR
   manufacturer: BAZ
   layout: ES
-  events:
+  actions:
     - type: VisualTest
       appearanceRange: A
       functionalityRange: A
