--- a/ereuse_devicehub/dummy/files/lenovo-3493BAG.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/lenovo-3493BAG.snapshot.11.yaml
@@ -6,7 +6,7 @@
   "type": "Snapshot",
   "device": {
     "serialNumber": "PB357N0",
-    "events": [
+    "actions": [
     {
       "elapsed": 60,
       "type": "StressTest",
@@ -27,7 +27,7 @@
   "software": "Workbench",
   "components": [
   {
-    "events": [],
+    "actions": [],
     "speed": 1000,
     "serialNumber": "d4:3d:7e:41:c4:c4",
     "model": "RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller",
@@ -37,7 +37,7 @@
   },
   {
     "cores": 2,
-    "events": [
+    "actions": [
     {
       "elapsed": 0,
       "type": "BenchmarkProcessor",
@@ -57,7 +57,7 @@
     "type": "Processor"
   },
   {
-    "events": [],
+    "actions": [],
     "memory": 256.0,
     "serialNumber": null,
     "model": "2nd Generation Core Processor Family Integrated Graphics Controller",
@@ -65,7 +65,7 @@
     "type": "GraphicCard"
   },
   {
-    "events": [],
+    "actions": [],
     "serialNumber": null,
     "model": "6 Series/C200 Series Chipset Family High Definition Audio Controller",
     "manufacturer": "Intel Corporation",
@@ -73,7 +73,7 @@
   },
   {
     "serialNumber": "292E48DA",
-    "events": [],
+    "actions": [],
     "speed": 1333.0,
     "size": 2048,
     "format": "DIMM",
@@ -84,7 +84,7 @@
   },
   {
     "serialNumber": "Z2AYPLNP",
-    "events": [
+    "actions": [
     {
       "writeSpeed": 20.4,
       "type": "BenchmarkDataStorage",
@@ -123,7 +123,7 @@
     "serial": 1,
     "usb": 2,
     "pcmcia": 0,
-    "events": [],
+    "actions": [],
     "slots": 2,
     "serialNumber": null,
     "firewire": 0,
@@ -132,10 +132,5 @@
     "type": "Motherboard"
   }
   ],
-  "expectedEvents": [
-    "Benchmark",
-    "SmartTest",
-    "StressTest",
-    "EraseBasic"
-  ]
+
 }
