--- a/tests/files/1-device-with-components.snapshot.yaml
+++ b/tests/files/1-device-with-components.snapshot.yaml
@@ -14,7 +14,7 @@ components:
     speed: 1.23
     cores: 2
     type: Processor
-    events:
+    actions:
       - type: BenchmarkProcessor
         rate: 1
         elapsed: 166
