--- a/tests/files/erase-sectors-2-hdd.snapshot.yaml
+++ b/tests/files/erase-sectors-2-hdd.snapshot.yaml
@@ -5,7 +5,7 @@
     "manufacturer": 'bar',
     "model": 'baz',
     "type": "Desktop",
-    "events": [],
+    "actions": [],
     "chassis": "Tower"
   },
   "elapsed": 7631,
@@ -13,10 +13,6 @@
   "type": "Snapshot",
   "closed": false,
   "uuid": "5387668a-8d21-4053-a1ac-36efb97fc3ea",
-  "expectedEvents": [
-    "TestDataStorage",
-    "EraseBasic"
-  ],
   "components": [
   {
     "serialNumber": null,
@@ -25,7 +21,7 @@
     "address": 64,
     "model": "Intel Core i3-2100 CPU @ 3.10GHz",
     "type": "Processor",
-    "events": [
+    "actions": [
     {
       "elapsed": 0,
       "rate": 6665.7,
@@ -39,7 +35,7 @@
     "manufacturer": "Intel Corporation",
     "model": "6 Series/C200 Series Chipset Family High Definition Audio Controller",
     "type": "SoundCard",
-    "events": [],
+    "actions": [],
     "serialNumber": null
   },
   {
@@ -49,7 +45,7 @@
     "format": "DIMM",
     "model": "9905403-038.A00LF",
     "type": "RamModule",
-    "events": [],
+    "actions": [],
     "interface": "DDR3",
     "speed": 1333.0
   },
@@ -57,7 +53,7 @@
     "manufacturer": "Realtek Semiconductor Co., Ltd.",
     "model": "RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller",
     "type": "NetworkAdapter",
-    "events": [],
+    "actions": [],
     "serialNumber": "f4:6d:04:12:9b:85",
     "speed": 1000,
     "wireless": false
@@ -68,7 +64,7 @@
     "manufacturer": "Western Digital",
     "model": "WDC WD3200AAJS-2",
     "type": "HardDrive",
-    "events": [
+    "actions": [
     {
       "endTime": "2018-07-13T11:54:55.100581+00:00",
       "steps": [
@@ -112,7 +108,7 @@
     "manufacturer": "Western Digital",
     "model": "WDC WD3200AAJS-0",
     "type": "HardDrive",
-    "events": [
+    "actions": [
     {
       "endTime": "2018-07-13T12:55:47.331586+00:00",
       "steps": [
@@ -154,7 +150,7 @@
     "manufacturer": "Intel Corporation",
     "model": "2nd Generation Core Processor Family Integrated Graphics Controller",
     "type": "GraphicCard",
-    "events": [],
+    "actions": [],
     "memory": 256.0
   },
   {
@@ -163,7 +159,7 @@
     "manufacturer": "ASUSTeK Computer INC.",
     "model": "P8H61-M LE",
     "type": "Motherboard",
-    "events": [],
+    "actions": [],
     "slots": 2,
     "usb": 2,
     "firewire": 0,
