Formal changes to set up for 1.0a1

--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -2,14 +2,14 @@
 # It uses plain HTTP
 # Change the following variables:
 
-Define servername api.devicetag.io
 # The domain used to access the server
-Define appdir /home/devicetag/sites/${servername}/source/
+Define servername api.devicetag.io
 # The path where the app directory is. Apache must have access to this folder.
-Define wsgipath ${appdir}/wsgi.py
+Define appdir /home/ereuse/sites/${servername}/source/
 # The location of the .wsgi file
-Define pyvenv ${appdir}../venv/
+Define wsgipath ${appdir}/wsgi.py
 # The path where the virtual environment is (the folder containing bin/activate)
+Define pyvenv ${appdir}../venv/
 
 <VirtualHost *:80>
     ServerName ${servername}
