adding coverage for test in github

--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -49,7 +49,7 @@ jobs:
         pip install virtualenv
         virtualenv env
         source env/bin/activate
-        pip install flake8 pytest
+        pip install flake8 pytest coverage
         pip install -r requirements.txt
 
     - name: Prepare database
@@ -67,5 +67,7 @@ jobs:
     - name: Run Tests
       run: |
         source env/bin/activate
-        pytest -m mvp --maxfail=5 tests/
+        coverage run --source='ereuse_devicehub' env/bin/pytest -m mvp --maxfail=5 tests/
+        coverage report --include='ereuse_devicehub/*'
+        coverage xml
 
