--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -71,3 +71,7 @@ jobs:
         coverage report --include='ereuse_devicehub/*'
         coverage xml
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
