--- a/fabfile/templates/nginx/site_template.conf
+++ b/fabfile/templates/nginx/site_template.conf
@@ -17,9 +17,9 @@ server {{
     #include /etc/letsencrypt/options-ssl-nginx.conf;
 
     # Redirect non-https traffic to https
-    if ($scheme != "https") {{
-        return 301 https://$host$request_uri;
-    }}
+    # if ($scheme != "https") {{
+    #     return 301 https://$host$request_uri;
+    # }}
 
     location / {{
         try_files $uri @proxy_to_app;
