--- a/tests/files/complete.export.snapshot.yaml
+++ b/tests/files/complete.export.snapshot.yaml
@@ -194,6 +194,12 @@
             "type": "StepRandom",
             "severity": "Info",
             "endTime": "2019-08-19T17:34:22.930562+00:00"
+          },
+          {
+            "startTime": "2019-08-19T17:34:22.690458+00:00",
+            "type": "StepZero",
+            "severity": "Info",
+            "endTime": "2019-08-19T18:34:22.930562+00:00"
           }
         ],
         "severity": "Info",
