--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ hashids==1.2.0
 inflection==0.3.1
 marshmallow==3.0.0b11
 marshmallow-enum==1.4.1
+more-itertools==8.12.0
 passlib==1.7.1
 phonenumbers==8.9.11
 pytest==7.0.0
