Sort requirements alphabetically

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ ereuse-utils[naming,test,session,cli]==0.4.0b49
 Flask==1.0.2
 Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.3.2
+flask-WeasyPrint==0.5
 hashids==1.2.0
 inflection==0.3.1
 marshmallow==3.0.0b11
@@ -17,23 +18,22 @@ marshmallow-enum==1.4.1
 more-itertools==8.12.0
 passlib==1.7.1
 phonenumbers==8.9.11
+psycopg2-binary==2.8.3
+PyJWT==2.0.0a1
 pytest==7.0.0
 python-dateutil==2.7.3
-python-stdnum==1.9
-PyYAML==5.4
-requests[security]==2.27.1
-requests-mock==1.5.2
-SQLAlchemy==1.2.17
-SQLAlchemy-Utils==0.33.11
-teal==0.2.0a38
-webargs==5.5.3
-Werkzeug==0.15.3
-sqlalchemy-citext==1.3.post0
-flask-weasyprint==0.5
-weasyprint==44
-psycopg2-binary==2.8.3
-sortedcontainers==2.1.0
-tqdm==4.32.2
 python-decouple==3.3
 python-dotenv==0.14.0
-pyjwt==2.0.0a1
+python-stdnum==1.9
+PyYAML==5.4
+requests-mock==1.5.2
+requests[security]==2.27.1
+sortedcontainers==2.1.0
+SQLAlchemy==1.2.17
+sqlalchemy-citext==1.3.post0
+SQLAlchemy-Utils==0.33.11
+teal==0.2.0a38
+tqdm==4.32.2
+WeasyPrint==44
+webargs==5.5.3
+Werkzeug==0.15.3
