flake8: exclude legacy code

--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,8 @@
 count = True
 exclude =
     migrations
+    resources   # exclude code that will be deprecated
+    tests   # exclude code that will be deprecated
 max-complexity = 10
 max-line-length = 120
 show-source = True
