--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -50,7 +50,7 @@ jobs:
         pip install virtualenv
         virtualenv env
         source env/bin/activate
-        pip install flake8 pytest coverage
+        pip install -r requirements-testing.txt
         pip install -r requirements.txt
 
     - name: Prepare database
