--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Flask-Cors==3.0.10
 Flask-SQLAlchemy==2.3.2
 hashids==1.2.0
 inflection==0.3.1
+itsdangerous==2.0.1
 marshmallow==3.0.0b11
 marshmallow-enum==1.4.1
 passlib==1.7.1
