--- a/.github/workflows/flask.yml
+++ b/.github/workflows/flask.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Run Tests
       run: |
         export SECRET_KEY=`python3 -c 'import secrets; print(secrets.token_hex())'`
-        coverage run --source='ereuse_devicehub' pytest -m mvp --maxfail=5 tests/
+        coverage run --source='ereuse_devicehub' -m pytest -m mvp --maxfail=5 tests/
         coverage report --include='ereuse_devicehub/*'
         coverage xml
 
