--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,9 @@ Flask-WTF==1.0.0
 hashids==1.2.0
 inflection==0.3.1
 itsdangerous==2.0.1
+# lock Jinja2 version because it's the latest compatible with Flask 1.0.X
+# see related info on https://github.com/pallets/jinja/issues/1628
+Jinja2==3.0.3
 marshmallow==3.0.0b11
 marshmallow-enum==1.4.1
 passlib==1.7.1
