--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ click-spinner==0.1.8
 colorama==0.3.9
 colour==0.1.5
 ereuse-utils[naming,test,session,cli]==0.4.0b49
-Flask==1.0.2
+Flask>=2.0
 Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.3.2
