--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -32,9 +32,9 @@ jobs:
           npm install @microsoft/eslint-formatter-sarif@2.1.7
 
       - name: Run ESLint
-        run: npx eslint .
+        run: npx eslint ereuse_devicehub
           --config .eslintrc.js
-          --ext .js,.jsx,.ts,.tsx
+          --ext .js
           --output-file eslint-results.sarif
         continue-on-error: true
 
