--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -27,9 +27,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install ESLint
-        run: |
-          npm install eslint@8.10.0
-          npm install @microsoft/eslint-formatter-sarif@2.1.7
+        run: yarn
 
       - name: Run ESLint
         run: npx eslint ereuse_devicehub
@@ -38,8 +36,10 @@ jobs:
           --output-file eslint-results.sarif
         continue-on-error: true
 
-      - name: Upload analysis results to GitHub
-        uses: github/codeql-action/upload-sarif@v2
+      - name: Generate report
+        uses: tinovyatkin/action-eslint@v1
         with:
-          sarif_file: eslint-results.sarif
-          wait-for-processing: true
+          repo-token: ${{secrets.GITHUB_TOKEN}}
+          check-name: eslint # this is the check name from above 👆 where to post annotations
+          extensions: 'js'
+          annotations: true
